# turtlesim-control

./: README.md
turtle_control/: CMakeLists.txt  package.xml
turtle_control/config/: params.yaml  params_acceleration.yaml  params_chaser_fast.yaml  params_chaser_slow.yaml
turtle_control/include/turtle_control/: chase_turtle.hpp  movement_pattern_controller.hpp  pid_pose_controller.hpp  rotate_circle.hpp
turtle_control/launch/: goal_five_chase_slow.launch.py  goal_four_chase.launch.py  goal_four_chase_fast.launch.py  goal_six_chase_noisy.launch.py  goal_three_circle.launch.py  goal_two_make_grid.launch.py  make_grid.launch.py  pid_pose_controller.launch.py
turtle_control/src/: chase_turtle.cpp  follow_grid.cpp  pid_pose_controller.cpp  rotate_circle.cpp
turtle_interface/: CMakeLists.txt  package.xml
turtle_interface/action/: GoToPose.action
turtle_interface/srv/: RotateCircle.srv
